# systemverilog-rom-assembler

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  flake.nix
programs/: add_and_jump.cpu8_v1  add_and_jump.lasm8_v1  add_and_jump.sv  counting.cpu8_v1  counting.lasm8_v1  counting.sv  input_output.cpu8_v1  input_output.sv  input_output.svrasm  nop_and_jump.cpu8_v1  nop_and_jump.lasm8_v1  nop_and_jump.sv
src/: main.cpp
src/ast/: Node.cpp  Node.h  Observer.cpp  Observer.h  PostfixObserver.cpp  PostfixObserver.h  PrefixObserver.cpp  PrefixObserver.h
src/ast/nodes/: AluNode.cpp  AluNode.h  ConstNode.cpp  ConstNode.h  JumpNode.cpp  JumpNode.h  MovNode.cpp  MovNode.h  RootNode.cpp  RootNode.h
src/codegen/: CodegenObserver.cpp  CodegenObserver.h  PrintObserver.cpp  PrintObserver.h
src/lexer/: Lexer.cpp  Lexer.h  Token.cpp  Token.h
src/parser/: Parser.cpp  Parser.h
